# San_AI_PoC

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.cursor/rules/: README.md
.github/workflows/: databricks-deploy.yml  deploy-to-databricks.yml
conf/: dev.yaml  prod.yaml  test.yaml
notebooks/: README.md  bronze_ingest.py  create_tables.py  dim_customer_scd2.py  dim_pricing_scd2.py  dim_product_scd2.py  fact_sales_merge.py  gold_star.py  silver_transform.py
sql/: bronze_ddl.sql  gold_ddl.sql  silver_ddl.sql
src/etl/: bronze_ingest.py  gold_star.py  scd2.py  silver_transform.py
src/spark/: session.py
terraform/: README.md  databricks.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/scripts/: mount_storage.sh
tests/: conftest.py  test_silver_transform.py
